rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_case_dimension_hidden_ref.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_ms_view__category_label | orders_ms_view__total_amount
-------------------------------+-----------------------------
Literature                     | 880.00                      
Other                          | 1370.00
