rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_exclude_drops_segment_from_leaf.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_ms_view__category | orders_ms_view__total_amount | orders_ms_view__amount_exclude_segment
-------------------------+------------------------------+---------------------------------------
books                    | 600.00                       | 880.00                                
clothing                 | 300.00                       | 720.00                                
electronics              | 500.00                       | 650.00
