rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_filtered_measure_hidden_ref.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_ms_view__status | orders_ms_view__amount_filtered_hidden
-----------------------+---------------------------------------
cancelled              | 100.00                                
completed              | 600.00                                
pending                | 180.00
