rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_keep_only_dim_filter_at_leaf.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_ms_view__status | orders_ms_view__total_amount | orders_ms_view__amount_keep_only_status
-----------------------+------------------------------+----------------------------------------
completed              | 600.00                       | 1400.00
