rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_keep_only_segment_at_leaf.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_ms_view__category | orders_ms_view__total_amount | orders_ms_view__amount_keep_only_segment
-------------------------+------------------------------+-----------------------------------------
books                    | 600.00                       | 600.00
