rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_order_by_hidden_member.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_ms_view__status | orders_ms_view__amount_rank_order_by_hidden
-----------------------+--------------------------------------------
cancelled              | 3                                          
completed              | 1                                          
pending                | 2
