rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_rank_order_by_referencing_unexposed_measure.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_rank_view__status | orders_rank_view__amount_rank_by_status
-------------------------+----------------------------------------
cancelled                | 3                                      
pending                  | 2                                      
completed                | 1
