rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_with_calculated.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_ms_view__created_at_month | orders_ms_view__total_amount | orders_ms_view__mom_growth
---------------------------------+------------------------------+---------------------------
2024-01-01 00:00:00              | 500.00                       | NULL                      
2024-02-01 00:00:00              | 750.00                       | 0.50000000000000000000    
2024-03-01 00:00:00              | 1000.00                      | 0.33333333333333333333
