rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__views__view_with_time_shift.snap
---
source: cubesqlplanner/src/tests/integration/multi_stage/views.rs
expression: result
---
orders_ms_view__created_at_month | orders_ms_view__amount_prev_month
---------------------------------+----------------------------------
2024-02-01 00:00:00              | 500.00                           
2024-03-01 00:00:00              | 750.00
